[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemies/ThePilot/BombExplosionSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Enemies/ThePilot/Bomb/BombExplosion.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Explode",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 19.0542
height = 15.6687

[sub_resource type="CapsuleShape2D" id=16]
radius = 34.1169
height = 28.8867

[sub_resource type="CapsuleShape2D" id=17]
radius = 58.368
height = 11.8545

[node name="BombExplostion" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -65.3836 )
frames = SubResource( 14 )
animation = "Explode"
frame = 1

[node name="SmallHitBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="SmallHitBox" index="0"]
position = Vector2( 0, -25.811 )
shape = SubResource( 15 )
disabled = true

[node name="MediumHitBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="MediumHitBox" index="0"]
position = Vector2( 0, -48.9202 )
shape = SubResource( 16 )
disabled = true

[node name="LargeHitBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="LargeHitBox" index="0"]
position = Vector2( 0, -65.2269 )
shape = SubResource( 17 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="SmallHitBox"]

[editable path="MediumHitBox"]

[editable path="LargeHitBox"]
